    linux-image versions. (closes: #344867)
  * removed needless debian/hack
  * added debian/watch
  * bumped debhelper compat level to 5, add versioned depends on
    debhelper (>> 5.0.0)
  * patches/02_timeout.dpatch:
    - new cryptsetup commandline option: timeout for password prompt
  * update debian/cryptsetup.8 to mention batch-mode and timeout
  * updated cryptdisks
    - modify init script to use lsb functions
    - updated comments for cryptdisks.default
    - moved option parsing and setup of loopback devices to seperate functions
    - always check for the source device exists before running cryptsetup
    - hardcode precheck for LUKS to use 'cryptsetup isLuks'. this is much safer
      than allowing other random prechecks, as it manifests that the source
      device actually is a LUKS partition.
    - don't remove the LUKS device when postcheck fails, as the supplied
      password/key is correct anyway.
    - use the new 'timeout' commandline option of cryptsetup instead of an
      external wrapper
    - be silent for not existing devices per default. Implement the lout
      option for crypttab to warn if a device does not exist.

  [ Michael Gebetsroither ]
  * added "batch mode" patch (already accepted by upstream)
  * converted crypttab.sgml to asciidoc
  * added dependencies for asciidoc to manpage conversion
  * added developer documentation for a robust checksystem into cryptdisks

 -- Jonas Meurer <mejo@debian.org>  Sun, 19 Feb 2006 02:54:20 +0100

cryptsetup (2:1.0.1-16) unstable; urgency=low

  [ Jonas Meurer ]
  * already fixed in 2:1.0.1-14: binaries xor and delay from
    usbcrypto.mkinitrd don't exist in debian. replaces with a perl script
    and /bin/sleep. thanks to wesley terpstra for the help.
    (closes: #324353)
  * clean cryptdisks from bashisms (closes: #350360)
  * check for /usr/bin/timeout before using it in cryptdisks. First, it's
    only available when /usr is mounted, and that is not definitive when