@@ -18,6 +18,7 @@ cryptsetup (2:1.0.1-17) unstable; urgency=low
   * patches/02_timeout.dpatch:
     - new cryptsetup commandline option: timeout for password prompt
   * update debian/cryptsetup.8 to mention batch-mode and timeout
+  * install local cryptsetup.8 copy instead of the upstream manpage
   * updated cryptdisks
     - modify init script to use lsb functions
     - updated comments for cryptdisks.default
@@ -39,7 +40,7 @@ cryptsetup (2:1.0.1-17) unstable; urgency=low
   * added dependencies for asciidoc to manpage conversion
   * added developer documentation for a robust checksystem into cryptdisks
 
- -- Jonas Meurer <mejo@debian.org>  Sun, 19 Feb 2006 02:54:20 +0100
+ -- Jonas Meurer <mejo@debian.org>  Sun, 19 Feb 2006 03:11:28 +0100
 
 cryptsetup (2:1.0.1-16) unstable; urgency=low
 
